# S37

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json
.github/workflows/: deploy.yml
.husky/: commit-msg  pre-commit
contracts/: .rustfmt.toml  CLAUDE.md  Cargo.toml  Makefile
contracts/src/: lib.rs  test.rs
db/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
db/prisma/: seed.ts
db/src/: client.ts
docs/: backlog-hackathon.md  contract-user-flow.md  design-system.md
infra/: CLAUDE.md
infra/mariadb/: Dockerfile  fly.toml  my.cnf
server/: .env.example  API.md  CLAUDE.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
server/.husky/: pre-commit
server/prisma/: schema.prisma  seed.ts
server/src/: config.ts  index.ts
server/src/constants/: index.ts
server/src/helpers/: EncryptionHelper.ts  EnvHelper.ts  FileHelper.ts  PkceHelper.ts
server/src/hooks/: require-auth.ts
server/src/routes/: auth-route.ts  balance-route.ts  chat-route.ts  customers-route.ts  destinations-route.ts  etherfuse-route.ts  health-route.ts  health.route.ts  (+7 more)
shared/: CLAUDE.md  package-lock.json  package.json  tsconfig.json
src/: generate-account.js  send-transaction.js
web/: .env.example  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
web/.husky/: pre-commit
web/public/: robots.txt  site.webmanifest  sitemap.xml
web/src/: App.tsx  env.d.ts  index.tsx  main.tsx  styles.css
(+189 files in other folders)
