[package]
name = "omnisplit"
version = "0.1.0"
edition = "2021"
description = "OmniSplit — Batch payment smart contract for Stellar/Soroban"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "26.0.0" }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true